--- a/4_Covid_Chile/liner-regression-vaccination-mortality-analysis.ipynb
+++ b/4_Covid_Chile/liner-regression-vaccination-mortality-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f3ef3ea2",
    "metadata": {
     "execution": {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a76955d8",
    "metadata": {
     "collapsed": false,
@@ -185,6 +185,71 @@
        "      <td>40094444.0</td>\n",
        "      <td>1.196111</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-05-30</td>\n",
+       "      <td>600152.0</td>\n",
+       "      <td>480226.0</td>\n",
+       "      <td>119926.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>40094444.0</td>\n",
+       "      <td>1.197737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-06-02</td>\n",
+       "      <td>626290.0</td>\n",
+       "      <td>481690.0</td>\n",
+       "      <td>144600.0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>40094444.0</td>\n",
+       "      <td>1.201388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-06-03</td>\n",
+       "      <td>630305.0</td>\n",
+       "      <td>481800.0</td>\n",
+       "      <td>148505.0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>40094444.0</td>\n",
+       "      <td>1.201663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-06-08</td>\n",
+       "      <td>641295.0</td>\n",
+       "      <td>482952.0</td>\n",
+       "      <td>158343.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>40094444.0</td>\n",
+       "      <td>1.204536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-06-14</td>\n",
+       "      <td>662003.0</td>\n",
+       "      <td>484737.0</td>\n",
+       "      <td>177266.0</td>\n",
+       "      <td>85</td>\n",
+       "      <td>40094444.0</td>\n",
+       "      <td>1.208988</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -196,6 +261,11 @@
        "2           2  Afghanistan      AFG  2021-05-24            573277.0   \n",
        "3           3  Afghanistan      AFG  2021-05-26            590454.0   \n",
        "4           4  Afghanistan      AFG  2021-05-27            593313.0   \n",
+       "5           5  Afghanistan      AFG  2021-05-30            600152.0   \n",
+       "6           6  Afghanistan      AFG  2021-06-02            626290.0   \n",
+       "7           7  Afghanistan      AFG  2021-06-03            630305.0   \n",
+       "8           8  Afghanistan      AFG  2021-06-08            641295.0   \n",
+       "9           9  Afghanistan      AFG  2021-06-14            662003.0   \n",
        "\n",
        "   people_vaccinated  people_fully_vaccinated  New_deaths  population  \\\n",
        "0           448878.0                  55624.0          12  40094444.0   \n",
@@ -203,23 +273,33 @@
        "2           476367.0                  96910.0          10  40094444.0   \n",
        "3           479372.0                 111082.0          19  40094444.0   \n",
        "4           479574.0                 113739.0          14  40094444.0   \n",
+       "5           480226.0                 119926.0          20  40094444.0   \n",
+       "6           481690.0                 144600.0          34  40094444.0   \n",
+       "7           481800.0                 148505.0          27  40094444.0   \n",
+       "8           482952.0                 158343.0          64  40094444.0   \n",
+       "9           484737.0                 177266.0          85  40094444.0   \n",
        "\n",
        "      ratio  \n",
        "0  1.119552  \n",
        "1  1.173083  \n",
        "2  1.188112  \n",
        "3  1.195607  \n",
-       "4  1.196111  "
+       "4  1.196111  \n",
+       "5  1.197737  \n",
+       "6  1.201388  \n",
+       "7  1.201663  \n",
+       "8  1.204536  \n",
+       "9  1.208988  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('./covid_vaccination_vs_death_ratio.csv')\n",
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
@@ -2410,7 +2490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -2437,6 +2517,11 @@
    "parameters": {},
    "start_time": "2021-10-15T00:56:50.581212",
    "version": "2.3.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c219ef5cc60cb1fe992d92d78fdbfe860a3f25886d77e6b32be4ebf606a655a4"
+   }
   }
  },
  "nbformat": 4,
