--- a/Covid_Chile/liner-regression-vaccination-mortality-analysis.ipynb
+++ b/Covid_Chile/liner-regression-vaccination-mortality-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "f3ef3ea2",
    "metadata": {
     "execution": {
@@ -26,7 +26,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import missingno as msgo\n",
+    "#import missingno as msgo\n",
     "import seaborn as sns\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import plotly.express as px\n",
@@ -1794,7 +1794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   },
   "papermill": {
    "default_parameters": {},
